--- a/themes/wwcomps/assets/css/main.css
+++ b/themes/wwcomps/assets/css/main.css
@@ -10,3 +10,28 @@
 
 
 
+
+/*Start of Noyon*/
+
+
+
+
+
+
+/*Start of Shariful*/
+
+
+
+
+
+
+/*Start of Sabbir*/
+
+
+
+
+
+
+/*Start of Niaz*/
+
+
