--- a/themes/wwcomps/assets/css/_page.css
+++ b/themes/wwcomps/assets/css/_page.css
@@ -1,20 +1,20 @@
 .slick-slider ul.slick-dots{
 	position: static;
-	height: 16px;
+	height: 22px;
 	line-height: 0;
-	padding: 0 20px!important;
+	padding: 0 10px!important;
 }
 .slick-slider .slick-dots li{
-	width: 16px!important;
-	height: 16px!important;
+	width: 22px!important;
+	height: 22px!important;
 	position: static;
-	background: #E1E1E1!important;
+	background: #c18f54!important;
 	border-radius: 100% 100%!important;
-	margin: 0 8px;
+	margin: 0 4px;
 	padding: 0!important;
 }
 .slick-slider .slick-dots li.slick-active{
-	background: #F3BA4B!important;
+	background: #ffffff!important;
 }
 .slick-slider .slick-dots li:before,
 .slick-slider .slick-dots li button:before{
@@ -22,8 +22,8 @@
 }
 .slick-slider .slick-dots li button{
 	padding: 0;
-	width: 16px;
-	height: 16px;
+	width: 22px;
+	height: 22px;
 }
 
 
