--- a/themes/wwcomps/assets/fonts/custom-fonts.css
+++ b/themes/wwcomps/assets/fonts/custom-fonts.css
@@ -9,3 +9,17 @@
          url('LatoRegular/LatoRegular.svg#LatoRegular') format('svg');
     font-weight: normal;
 }
+
+@font-face {
+    font-family:'SegoeUI-Regular';
+    src: url('SegoeUI-Regular/SegoeUI.eot');
+    src: url('SegoeUI-Regular/SegoeUI.eot?#iefix') format('embedded-opentype'),
+        url('SegoeUI-Regular/SegoeUI.woff2') format('woff2'),
+        url('SegoeUI-Regular/SegoeUI.woff') format('woff'),
+        url('SegoeUI-Regular/SegoeUI.ttf') format('truetype'),
+        url('SegoeUI-Regular/SegoeUI.svg#SegoeUI') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
