--- a/themes/wwcomps/assets/css/_commons.css
+++ b/themes/wwcomps/assets/css/_commons.css
@@ -28,6 +28,7 @@ body {
     line-height: 30px;
     font-family: 'Hind', sans-serif;
     font-weight: 300;
+    /*font-family:'SegoeUI-Regular';*/
 }
 p{
 	line-height: 2.0;
