--- a/themes/wwcomps/assets/css/_typo.css
+++ b/themes/wwcomps/assets/css/_typo.css
@@ -5,6 +5,7 @@ h1,h2,h3,h4,h5,h6{
 	line-height: 1;	
 	margin-top: 0;
 	margin-bottom: 20px;
+	font-family: 'LeagueSpartan-Semibold';
 }
 h1,.fl-h1{
 	font-size: 48px;
