--- a/themes/wwcomps/assets/css/_commons.css
+++ b/themes/wwcomps/assets/css/_commons.css
@@ -22,7 +22,7 @@ a, a:hover, a:focus, button:hover, button:focus{
 }
 
 body {
-    background: #175783;
+    background: #fff;
     color: #545050;
     font-size: 20px;
     line-height: 30px;
