--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -28,6 +28,9 @@
 	width:100%;
 	background:#fff;
 	padding-top:63px;
+	padding-left:39px;
+	padding-right:39px;
+	padding-bottom:56px;
 }
 .page-des h1{
 	font-family: 'LeagueSpartan-Medium';
@@ -45,4 +48,7 @@
 .page-des strong{
 	display:inline-block;
 	line-height:1;
+	font-size:24px;
+	font-family: 'Hind', sans-serif;
+	font-weight:500;
 }
