--- a/themes/wwcomps/assets/css/_commons.css
+++ b/themes/wwcomps/assets/css/_commons.css
@@ -331,23 +331,24 @@ ul{
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	padding-left: 35px;
+	padding-left: 0;
 	padding-bottom: 10px;
 }
 .default-page-con ul li,
 ul li {
-	padding: 5px 0 5px 35px;
+	padding: 5px 0 5px 16px;
 	position: relative;
 	line-height: 24px;
+	font-size: 16px;
 }
 
 .default-page-con ul li::before, ul li::before {
     content: "";
     position: absolute;
     left: 0;
-    top: 6px;
-    width: 13px;
-    height: 18px;
+    top: 3px;
+    width: 8px;
+    height: 8px;
     background: url(../images/list-icon.svg);
     background-repeat: no-repeat;
     background-size: 100% auto;
