--- a/themes/wwcomps/assets/css/_entry-lists.css
+++ b/themes/wwcomps/assets/css/_entry-lists.css
@@ -11,24 +11,29 @@
 	background: #fff;
 	background-image: url('../images/_entry-item-icon.png');
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: right bottom;
 	background-size: cover;
-	padding: 38px 23px 35px;
+	padding: 38px 7px 35px 23px;
 	display: flex;
 	flex-direction: column;
+	-webkit-box-shadow: 5px 5px 10px 0px rgba(112,112,112,1);
+	-moz-box-shadow: 5px 5px 10px 0px rgba(112,112,112,1);
+	box-shadow: 5px 5px 10px 0px rgba(112,112,112,1);
 }
 .entry-grid-list-items ul{
 	display: flex;
-	margin: 0 -16px;
+	flex-wrap: wrap;
+	margin: -22px;
 }
 .entry-grid-list-items ul li{
 	max-width: 33.3333%;
 	width: 100%;
-	padding: 0 16px;
+	padding: 22px;
 }
 .title-bar{
 	display: flex;
-	align-items: center;
+	align-items: flex-end;
+	padding-bottom: 16px;
 }
 .entty-item-title{
 	display: flex;
@@ -51,4 +56,10 @@
 	font-weight: 300;
 	font-size: 16px;
 	padding-bottom: 39px;
+}
+.entry-lst-btn{
+	width: 120px;
+	height: 40px;
+	font-size: 16px;
+	text-transform: uppercase;
 }
