--- a/themes/wwcomps/assets/fonts/custom-fonts.css
+++ b/themes/wwcomps/assets/fonts/custom-fonts.css
@@ -77,3 +77,16 @@
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'LeagueSpartan-Regular';
+    src: url('LeagueSpartan-Regular/LeagueSpartan-Regular.eot');
+    src: url('LeagueSpartan-Regular/LeagueSpartan-Regular.eot?#iefix') format('embedded-opentype'),
+        url('LeagueSpartan-Regular/LeagueSpartan-Regular.woff2') format('woff2'),
+        url('LeagueSpartan-Regular/LeagueSpartan-Regular.woff') format('woff'),
+        url('LeagueSpartan-Regular/LeagueSpartan-Regular.ttf') format('truetype'),
+        url('LeagueSpartan-Regular/LeagueSpartan-Regular.svg#LeagueSpartan-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
