--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -57,6 +57,7 @@
 	font-size:24px;
 	font-family: 'Hind', sans-serif;
 	font-weight:500;
+	padding-bottom:32px;
 }
 .page-des span{
 	position: absolute;
