--- a/themes/wwcomps/assets/css/_commons.css
+++ b/themes/wwcomps/assets/css/_commons.css
@@ -364,7 +364,7 @@ ul li.refGridItem:before{
 	display: none;
 }
 .default-page-con ol, ol {
-	padding: 0 0 0 0px;
+	padding: 0 46px 0 0px;
 	list-style: none;
 	counter-reset: my-awesome-counter;
 	-ms-counter-reset: my-awesome-counter;
@@ -374,9 +374,9 @@ ul li.refGridItem:before{
 	counter-increment: my-awesome-counter;
 	-ms-counter-increment: my-awesome-counter;
 	-webkit-counter-increment: my-awesome-counter;
-	padding-bottom: 15px;
-	line-height: 26px;
-	padding-left: 25px;
+	padding-bottom: 34px;
+	line-height: 30px;
+	padding-left: 21px;
 	position: relative;
 }
 .default-page-con ol li::before,
