--- a/themes/wwcomps/assets/css/_ended-competitions.css
+++ b/themes/wwcomps/assets/css/_ended-competitions.css
@@ -3,7 +3,66 @@
 	padding: 80px;
 	padding-bottom: 120px;
 }
-
+.product-grds-cntlr ul{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 -10px;
+}
+.product-grds-cntlr ul li{
+	width: 33.3333%;
+	padding: 0 10px 20px;
+}
 .product-grd-item-des{
 	background: #fff;
 }
+.pro-fea-img-cntlr{
+	height: 345px;
+	position: relative;
+	overflow: hidden;
+}
+
+.pro-fea-img-cntlr .inline-bg{
+	width: 100%;
+	height: 100%;
+}
+
+.pro-absolute-text{
+	position: absolute;
+	right: 0;
+	top: 25px;
+	padding: 10px 13px 10px 18px;
+	background: #175884;
+	color: #fff;
+	font-size: 12px;
+	line-height: 1;
+	font-family: 'LeagueSpartan-Semibold';
+	z-index: 11;
+}
+.pro-absolute-text:before{
+	content: "";
+	position: absolute;
+	right: 100%;
+	top: 0;
+	bottom: 0;
+	width: 7px;
+	background: url(../images/pro-absolute-text-angle.png);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+}
+
+.pgid-title{
+	margin-bottom: 15px;
+	text-transform: uppercase;
+}
+
+.product-grd-item-des{
+	padding: 30px 20px 20px 20px;
+}
+
+.pro-grd-price{
+	color: #35AA5F;
+	font-size: 32px;
+	line-height: 1;
+	font-family: 'LeagueSpartan-Extrabold';
+}
+
