--- a/themes/wwcomps/assets/css/_entry-lists.css
+++ b/themes/wwcomps/assets/css/_entry-lists.css
@@ -2,9 +2,11 @@
 
 }
 .entry-list-bg{
-	min-height: 1406px;
 	padding-top: 71px;
 	padding-bottom: 119px;
+}
+.entry-grid-list-items {
+    padding-bottom: 79px;
 }
 .entry-list-item{
 	min-height: 250px;
