--- a/themes/wwcomps/assets/css/_home.css
+++ b/themes/wwcomps/assets/css/_home.css
@@ -38,3 +38,13 @@
 	left: 0;
 	background: #1C75BC;
 }
+
+
+.lates-winners-sec-con{
+	padding: 70px 0 30px;
+}
+
+.lwsc-btn a{
+	margin-left: auto;
+	margin-right: auto;
+}
