--- a/themes/wwcomps/assets/css/_home.css
+++ b/themes/wwcomps/assets/css/_home.css
@@ -14,6 +14,7 @@
 	background: #1C75BC;
 	padding-right: 70px;
 	position: relative;
+	letter-spacing: 1px;
 }
 .flash-title span{
 	font-family: 'LeagueSpartan-Regular';
