--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -38,13 +38,15 @@
 	position: relative;
 	border:1px solid #7C7C7C;
 }
-.page-des h1{
+.page-des h2,
+.page-des h2.fl-h1{
 	font-family: 'LeagueSpartan-Medium';
 	color:#3A3A3A;
 	text-transform:uppercase;
 	margin-bottom:24px;
 }
-.page-des h3{
+.page-des h3,
+.page-des h3.fl-h3{
 	font-family: 'LeagueSpartan-Medium';
 	color:#175884;
 	text-transform:uppercase;
@@ -63,5 +65,4 @@
 	position: absolute;
 	right:-22px;
 	top:18.7%;
- 
 }
