--- a/themes/wwcomps/assets/css/_about-us.css
+++ b/themes/wwcomps/assets/css/_about-us.css
@@ -10,3 +10,9 @@
 	font-weight: 500;
 	display:block;
 }
+.about-pg-des h3{
+	font-family: 'LeagueSpartan-Regular'!important;
+}
+.about-pg-des p{
+	
+}
