--- a/themes/wwcomps/assets/css/_home.css
+++ b/themes/wwcomps/assets/css/_home.css
@@ -51,3 +51,91 @@
 	max-width: 280px;
 	width: 100%;
 }
+
+.slider-filter ul{
+	display: table;
+	margin-left: auto;
+	margin-right: auto;
+	background: #fff;
+	position: relative;
+}
+
+
+.slider-filter ul li{
+	padding: 0 30px;
+	display: inline-block;
+	vertical-align: baseline;
+	position: relative;
+}
+
+.slider-filter ul li a{
+	display: block;
+	padding: 10px 10px;
+	color: #3A3A3A;
+	text-transform: uppercase;
+	font-family: 'LeagueSpartan-Semibold';
+	font-size: 18px;
+	line-height: 1;
+}
+.slider-filter ul li a:hover{
+	color: #35AA5F;
+}
+.slider-filter ul li:not(:last-child):after{
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 100%;
+	width: 15px;
+	background: url(../images/right-arrow-border.png);
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+}
+.slider-filter ul li:last-child:after{
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 100%;
+	border-top: 18px solid transparent;
+	border-bottom: 18px solid transparent;
+	border-left: 12px solid #fff;
+}
+.slider-filter ul li.active{
+	background: #35AA5F;
+}
+.slider-filter ul li.active:after{
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 100%;
+	width: 12px;
+	background: url(../images/right-arrow-border-green.png);
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	z-index: 2;
+}
+.slider-filter ul li:last-child.active:after{
+	content: none;
+}
+.slider-filter ul li:last-child.active:after{
+	content: ""!important;
+	position: absolute!important;
+	top: 0!important;
+	bottom: 0!important;
+	left: 100%!important;
+	width: 12px;
+	background: url(../images/right-arrow-border-green.png)!important;
+	background-size: 100% 100%!important;
+	background-repeat: no-repeat!important;
+	z-index: 2!important;
+	border: none!important;
+}
+.slider-filter ul li.active a{
+	color: #fff;
+}
+
+.slider-filter{
+	margin-bottom: 65px;
+}
