--- a/themes/wwcomps/assets/css/_page.css
+++ b/themes/wwcomps/assets/css/_page.css
@@ -62,6 +62,7 @@
 	font-weight: 500;
 	font-size: 16px;
 	padding: 9px 12px;
+	cursor: pointer;
 }
 .fl-pagi-cntlr ul li a,
 .page-numbers.dots{
@@ -71,7 +72,8 @@
 	background: #C18F53;
 	padding: 9px 12px;
 }
-.fl-pagi-cntlr ul li a:hover{
+.fl-pagi-cntlr ul li a:hover,
+.fl-pagi-cntlr ul li span:hover{
 	color: #665440;
 	background: #fff;
 }
@@ -83,6 +85,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	width: 40px;
+	border: 2px solid transparent;
 }
 .prev:after{
 	position: absolute;
@@ -103,5 +107,6 @@
 .prev:hover,
 .next:hover{
 	background: #665440!important;
+	border: 2px solid #fff;
 }
 /*== pagination end ==*/
