--- a/themes/wwcomps/assets/css/_faqs.css
+++ b/themes/wwcomps/assets/css/_faqs.css
@@ -15,6 +15,7 @@
 	font-weight:500;
 	margin-bottom:8px!important;
 	margin-top:42px;
+	cursor:pointer;
 }
 .hh-accordion-title:after{
 	content:"\f077";
@@ -24,7 +25,10 @@
 	top:0;
 	width:32px;
 	height:32px;
-	border:2px solid #707070;
+	border-style:solid;
+	border-width: 2px;
+	border-image-slice: 1;
+    border-image-source: linear-gradient(to left, #2174a8, #01934a);
 	font-weight:700;
 	display: flex;
 	justify-content: center;
@@ -33,4 +37,7 @@
 }
 .faqs-pg-des span{
 	right:-21px;
+}
+.hh-accordion-active:after{
+	content:"\f078";
 }
