--- a/themes/wwcomps/assets/css/_contact-us.css
+++ b/themes/wwcomps/assets/css/_contact-us.css
@@ -97,7 +97,7 @@
 	content: "";
 	background-image: url('../images/location-ico.png');
 	background-repeat: no-repeat;
-	width: 116px;
+	width: 117px;
 	height: 100%;
 	left: 0;
     top: 50%;
@@ -112,7 +112,20 @@
 	min-height: 150px;
 	background-color: #fff;
 	background-position: right center!important;
-	padding: 24px 5px 20px 29px;
+	padding: 24px 5px 20px 20px;
+	position: relative;
+}
+.qck-lnk-item:before{
+	position: absolute;
+	content: "";	 
+	border-right: 16px solid #fff;	 
+	border-top: 15px solid transparent;	 
+	border-bottom: 15px solid transparent;
+	left: -2%;
+    top: 12%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
 }
 .qck-lnk-cntrl ul li:nth-child(2) .qck-lnk-items:after{
 	background-image: url('../images/phone-icon.png');
@@ -124,8 +137,25 @@
 	font-size: 24px;
 	font-family: 'LeagueSpartan-Semibold';
 	text-transform: uppercase;
+	margin-bottom: 16px;
+}
+.qck-lnk-item address, 
+.qck-lnk-item a{
+	font-size: 20px;
+	line-height: 1;
+	color: #545050;
 }
 .qck-lnk-item address{
-	font-size: 20px;
-	line-height: 1.3;
+	line-height: 1.4;
+	text-transform: capitalize;
+}
+.qck-lnk-item a{
+	display: block;
+	padding-bottom: 10px;
+}
+.qck-lnk-item a:hover{
+	color: #175783;
+}
+.qck-lnk-item a:last-child{
+	padding-bottom: 0;
 }
