--- a/themes/wwcomps/assets/css/_faqs.css
+++ b/themes/wwcomps/assets/css/_faqs.css
@@ -41,3 +41,22 @@
 .hh-accordion-active:after{
 	content:"\f077";
 }
+.page-des span:after,.faqs-pg-des span:after{
+	content: "";
+	background: #7C7C7C;
+	height: 1px;
+	width: 64px;
+	position: absolute;
+	left: -18px;
+	top: 36px;
+	transform: rotate(71deg);
+}
+.page-des span:before,.faqs-pg-des span:before {
+	content: "";
+	height: 1px;background: #7C7C7C;
+	position: absolute;
+	left: -16px;
+	bottom: 36px;
+	width: 60px;
+	transform: rotate(-69deg);
+} 
