--- a/themes/wwcomps/assets/css/_effects.css
+++ b/themes/wwcomps/assets/css/_effects.css
@@ -3,7 +3,7 @@ All Transitions
 */
 a,input,img,textarea,button,svg,i,.dft-transition,
 .pro-fea-img-cntlr .inline-bg,
-.hh-accordion-title:after{
+.hh-accordion-title span:after{
 	transition: all 0.5s;
 	-ms-transition: all 0.5s;
 	-webkit-transition: all 0.5s;
