--- a/themes/wwcomps/assets/css/_faqs.css
+++ b/themes/wwcomps/assets/css/_faqs.css
@@ -1,8 +1,8 @@
-.faqs-pg-des{
+.faqs-bnr-pg-desc{
 	max-width:1017px;
 	width:100%;
 }
-.faqs-pg-des h2{
+.faqs-bnr-pg-desc h2{
 	margin-bottom:30px;
 }
 .hh-accordion-title{
@@ -16,31 +16,35 @@
 	margin-bottom:8px!important;
 	margin-top:42px;
 	cursor:pointer;
+	text-transform: capitalize!important;
 }
-.hh-accordion-title:after{
-	content:"\f078";
-	position: absolute;
-	font-family: 'Font Awesome 5 Free';
-	left: 0;
-	top:0;
+.hh-accordion-title span{
 	width:32px;
 	height:32px;
-	border-style:solid;
-	border-width: 2px;
-	border-image-slice: 1;
-    border-image-source: linear-gradient(to left, #2174a8, #01934a);
+    left: 0;
+	top:0;
+    position: absolute;
+    border-style:solid;
+	border-width:2px;
+	border-image-source: linear-gradient(to left, #2174a8, #01934a);
     -ms-border-image-source: linear-gradient(to left, #2174a8, #01934a);
     -webkit-border-image-source: linear-gradient(to left, #2174a8, #01934a);
+    border-image-slice: 1;
+}
+.hh-accordion-title span:after{
+	content:"\f078";
+	font-family: 'Font Awesome 5 Free';
 	font-weight:700;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	color:#000000;
 }
-.faqs-pg-des span{
+.faqs-bnr-pg-desc span{
 	right:-21px;
 }
-.hh-accordion-active:after{
-	/*content:"\f077";*/
-	tr
+.hh-accordion-active span:after{
+	transform:rotate(180deg);
+	-ms-transform:rotate(180deg);
+	-webkit-transform:rotate(180deg);
 }
