--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -32,7 +32,7 @@
 	width:100%;
 	height:100%;
 }
-.page-des{
+.page-bnr-desc{
 	max-width:720px;
 	width:100%;
 	background:#fff;
@@ -43,36 +43,37 @@
 	position: relative;
 	border:1px solid #7C7C7C;
 }
-.page-des h2,
-.page-des h2.fl-h1{
+.page-bnr-desc h2,
+.page-bnr-desc h2.fl-h1{
 	font-family: 'LeagueSpartan-Bold';
 	color:#3A3A3A;
 	text-transform:uppercase;
 	margin-bottom:24px;
 }
-.page-des h2 strong,
-.page-des h2.fl-h1 strong{
+.page-bnr-desc h2 span,
+.page-bnr-desc h2.fl-h1 span{
 	font-family: 'LeagueSpartan-Medium';
 	font-weight:500;
 }
-.page-des h3,
-.page-des h3.fl-h3{
+.page-bnr-desc h3,
+.page-bnr-desc h3.fl-h3{
 	font-family: 'LeagueSpartan-Medium';
 	color:#175884;
 	text-transform:uppercase;
 	line-height:1.5;
 	margin-bottom:28px;
 }
-.page-des > strong{
+.page-bnr-desc > strong{
 	display:inline-block;
 	line-height:1;
 	font-size:24px;
 	font-weight:500;
 	padding-bottom:32px;
 }
-.page-des span {
+.page-bnr-desc > span {
     position: absolute;
     top: 16.5%;
     left: 100%;
     width: 26px;
+    margin-left: -2px;
 }
