--- a/themes/wwcomps/assets/css/_home.css
+++ b/themes/wwcomps/assets/css/_home.css
@@ -52,7 +52,7 @@
 	width: 100%;
 }
 
-.slider-filter ul{
+.slider-tabbar ul{
 	display: table;
 	margin-left: auto;
 	margin-right: auto;
@@ -61,14 +61,14 @@
 }
 
 
-.slider-filter ul li{
+.slider-tabbar ul li{
 	padding: 0 30px;
 	display: inline-block;
 	vertical-align: baseline;
 	position: relative;
 }
 
-.slider-filter ul li a{
+.slider-tabbar ul li a{
 	display: block;
 	padding: 10px 10px;
 	color: #3A3A3A;
@@ -77,10 +77,10 @@
 	font-size: 18px;
 	line-height: 1;
 }
-.slider-filter ul li a:hover{
+.slider-tabbar ul li a:hover{
 	color: #35AA5F;
 }
-.slider-filter ul li:not(:last-child):after{
+.slider-tabbar ul li:not(:last-child):after{
 	content: "";
 	position: absolute;
 	top: 0;
@@ -91,7 +91,7 @@
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 }
-.slider-filter ul li:last-child:after{
+.slider-tabbar ul li:last-child:after{
 	content: "";
 	position: absolute;
 	top: 0;
@@ -101,10 +101,10 @@
 	border-bottom: 18px solid transparent;
 	border-left: 12px solid #fff;
 }
-.slider-filter ul li.active{
+.slider-tabbar ul li.active{
 	background: #35AA5F;
 }
-.slider-filter ul li.active:after{
+.slider-tabbar ul li.active:after{
 	content: "";
 	position: absolute;
 	top: 0;
@@ -116,10 +116,10 @@
 	background-repeat: no-repeat;
 	z-index: 2;
 }
-.slider-filter ul li:last-child.active:after{
+.slider-tabbar ul li:last-child.active:after{
 	content: none;
 }
-.slider-filter ul li:last-child.active:after{
+.slider-tabbar ul li:last-child.active:after{
 	content: ""!important;
 	position: absolute!important;
 	top: 0!important;
@@ -132,10 +132,10 @@
 	z-index: 2!important;
 	border: none!important;
 }
-.slider-filter ul li.active a{
+.slider-tabbar ul li.active a{
 	color: #fff;
 }
 
-.slider-filter{
+.slider-tabbar{
 	margin-bottom: 65px;
 }
