--- a/themes/wwcomps/assets/css/_header.css
+++ b/themes/wwcomps/assets/css/_header.css
@@ -28,7 +28,7 @@
 	display: inline-block;
 }
 .header-top-socials ul li a:hover i svg{
-	fill: orange;
+	fill: #019245;
 }
 .header-top-right{
 	margin-left: auto;
