--- a/themes/wwcomps/assets/css/_contact-us.css
+++ b/themes/wwcomps/assets/css/_contact-us.css
@@ -13,7 +13,7 @@
 }
 .input-field-col input[type="text"],
 .input-field-col input[type="email"],
-.input-field-col textarea[type="text"]{
+.input-field-col textarea{
 	border: 1px solid #C6C6C6;
 	width: 100%;
 	height: 50px;
@@ -24,49 +24,54 @@
 	background-color: #F9F9F9;
 	padding: 0 9px;
 }
-.input-field-col textarea[type="text"]{
+.input-field-col textarea{
 	height: 200px;
 	padding-top: 15px;
 }
 .input-field-col input[type="text"]::placeholder,
 .input-field-col input[type="email"]::placeholder,
-.input-field-col textarea[type="text"]::placeholder{
+.input-field-col textarea::placeholder{
 	color: #828282;
 	font-family: 'Hind', sans-serif;
 	font-weight: 300;
 	font-size: 18px;
+	opacity: 1;
 }
 .input-field-col input[type="text"]::-webkit-input-placeholder,
 .input-field-col input[type="email"]::-webkit-input-placeholder,
-.input-field-col textarea[type="text"]::-webkit-input-placeholder{
+.input-field-col textarea::-webkit-input-placeholder{
 	color: #828282;
 	font-family: 'Hind', sans-serif;
 	font-weight: 300;
 	font-size: 18px;
+	opacity: 1;
 }
 .input-field-col input[type="text"]::-moz-placeholder,
 .input-field-col input[type="email"]::-moz-placeholder,
-.input-field-col textarea[type="text"]::-moz-placeholder{
+.input-field-col textarea::-moz-placeholder{
 	color: #828282;
 	font-family: 'Hind', sans-serif;
 	font-weight: 300;
 	font-size: 18px;
+	opacity: 1;
 }
 .input-field-col input[type="text"]:-ms-input-placeholder,
 .input-field-col input[type="email"]:-ms-input-placeholder,
-.input-field-col textarea[type="text"]:-ms-input-placeholder{
+.input-field-col textarea:-ms-input-placeholder{
 	color: #828282;
 	font-family: 'Hind', sans-serif;
 	font-weight: 300;
 	font-size: 18px;
+	opacity: 1;
 }
 .input-field-col input[type="text"]:-moz-placeholder,
 .input-field-col input[type="email"]:-moz-placeholder,
-.input-field-col textarea[type="text"]:-moz-placeholder{
+.input-field-col textarea:-moz-placeholder{
 	color: #828282;
 	font-family: 'Hind', sans-serif;
 	font-weight: 300;
 	font-size: 18px;
+	opacity: 1;
 }
 .cnt-form-btn{
 	width: 200px;
