--- a/themes/wwcomps/assets/css/_faqs.css
+++ b/themes/wwcomps/assets/css/_faqs.css
@@ -14,9 +14,14 @@
 	font-family: 'Hind', sans-serif!important;
 	font-weight:500;
 	margin-bottom:8px!important;
-	margin-top:42px;
 	cursor:pointer;
 	text-transform: capitalize!important;
+}
+.hh-accordion-tab-row {
+    padding-bottom: 30px;
+}
+.hh-accordion-des div p:last-child{
+	margin-bottom:0!important;
 }
 .hh-accordion-des{
 	display: none;
