--- a/themes/wwcomps/assets/css/main.css
+++ b/themes/wwcomps/assets/css/main.css
@@ -41,6 +41,7 @@
 @import url('_how-it-works.css');
 @import url('_about-us.css');
 @import url('_faqs.css');
+@import url('_forest-projects.css');
 
 /*Start of Rannojit*/
 
