--- a/themes/wwcomps/assets/css/_ended-competitions.css
+++ b/themes/wwcomps/assets/css/_ended-competitions.css
@@ -66,3 +66,38 @@
 	font-family: 'LeagueSpartan-Extrabold';
 }
 
+.pro-grd-ftr-bar{
+	background: #f8f4f1;
+	border-top: 1px solid #9c9c9c;
+	padding: 12px 20px;
+	display: flex;
+	position: relative;
+}
+.pro-grd-ftr-bar:before{
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	width: 60px;
+	height: 2px;
+	background: #c6c6c6;
+	top:-1px;
+}
+.pro-grd-time{
+	margin-left: auto;
+}
+
+.pro-grd-date,
+.pro-grd-time{
+	display: flex;
+	align-items: center;
+}
+.pro-grd-ftr-bar span{
+	margin-left: 5px;
+	font-size: 12px;
+	line-height: 1;
+	font-weight: 300;
+	display: inline-block;
+}
