--- a/themes/wwcomps/assets/css/_winner.css
+++ b/themes/wwcomps/assets/css/_winner.css
@@ -2,6 +2,9 @@
 	padding-top: 60px;
 	padding-bottom: 120px;
 }
+.product-grds-cntlr{
+	padding-bottom: 60px;
+}
 .product-grds-cntlr ul li{
 	max-width: 25%;
 }
