--- a/themes/wwcomps/assets/css/_forest-projects.css
+++ b/themes/wwcomps/assets/css/_forest-projects.css
@@ -1,10 +1,11 @@
 .our-project-sec-cntlr{
 	padding-top:50px;
+	padding-bottom:80px;
 }
 .our-project-grid-items ul{
 	display:flex;
 	flex-wrap:wrap;
-	margin:0 -10px;
+	margin:-10px -10px;
 }
 .our-project-grid-items ul li{
 	padding:10px 10px;
@@ -26,19 +27,54 @@
 	font-family: 'LeagueSpartan-Semibold';
 	color:#3A3A3A;
 }
-.proj-location{
+.proj-location span{
 	color:#1C75BC;
 	font-size:20px;
 	font-weight:400;
+	display:inline-block;
+	padding-left:20px;
+	position:relative;
+}
+.proj-location span:before{
+    content: "\f3c5";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 21px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 700;
+    color:#096ebe;
+}
+.proj-location{
+	margin-bottom:12px;
 }
 .pur-proj-dec{
 	padding-top:40px;
 	padding-bottom:40px;
 	padding-left:31px;
-	padding-right:31px;
+	padding-right:58px;
+	position:relative;
+}
+.pur-proj-dec:before{
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 49px;
+    background-image: url(../images/fp-our-proj-angle.png);
+    width: 39px;
+    height: 13px;
+    background-repeat: no-repeat;
 }
 .pur-proj-dec p{
 	font-size:16px;
+	line-height:1.6;
+}
+.pur-proj-dec p:last-child{
+	margin-bottom:0px;
 }
 .proj-btn{
 	display:flex;
@@ -54,4 +90,19 @@
 	font-size:13px;
 	font-family: 'LeagueSpartan-Semibold';
 
+}
+.proj-btn a:first-child{
+	background:#1d75bd;
+	border-color:#1d75bd;
+
+}
+.partners-sec-cntlr ul{
+	display:flex;
+}
+.partners-sec-cntlr ul li{
+	max-width:16.6666%;
+	width:100%;
+}
+.partners-logo img{
+	max-height:150px;
 }
