--- a/themes/wwcomps/assets/css/_header.css
+++ b/themes/wwcomps/assets/css/_header.css
@@ -155,6 +155,7 @@ nav.main-nav > ul > li > a:hover:after{
 	-webkit-transform: scale(1,1);
 	-o-transform: scale(1,1);
 }
+nav.main-nav > ul > li.menu-item-has-children:hover > a,
 nav.main-nav > ul > li a:hover,
 nav.main-nav > ul > li.current-menu-item > a{
 	color: #019245;
